--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,8 @@
 <%= @users %>
+
+          <li><%= link_to "Users", '#' %></li>
+          <li>
+                <%= link_to "Log out", logout_path, method: "delete" %>
+              </li>
+          
+ 
