--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,2 @@
-<%= react_component("RouterApp", props: { logged_in: logged_in?, 
-                                          authenticity_token: form_authenticity_token },
-                                          prerender: false ) %>
+<%= react_component("RouterApp") %>
 
