--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>Probuda | By Bryan Pauquette</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  
   <%= csrf_meta_tags %>
 </header>
 </head>
@@ -12,13 +11,11 @@
 <div>
   <%= yield %>
   <div class="flash-settings">
-    
-      <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
-    
+  </div>
 </div>
-
 <%= redux_store_hydration_data %>
 </body>
 </html>
