--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,14 +23,17 @@
 
 
 /*Content Structure */
-
+.content-wrapper {
+  text-align: center;
+  margin-top: 150px;
+  background-color: #fff;
+}
+@media(min-width: 768px) {
 .content-wrapper {
     padding-left: 150px;
-    background-color: #fff;
     margin-top: 100px;
-    text-align: center;
+  }
 }
-
 
 // .content-wrapper {
 //   height: 100vh;
