--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,15 @@
 <head>
   <title>Probuda | By Bryan Pauquette</title>
   <%= include_gon %>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= env_stylesheet_link_tag( static: 'application_static', 
+                               hot: 'application_non_webpack', 
+                               media: 'all', 
+                               'data-turbolinks-track' => true ) %>
+   <%= env_javascript_include_tag(hot: ['vendor-bundle.js',
+                                       'app-bundle.js']) %>
+  <%= env_javascript_include_tag(static: 'application_static',
+                                 hot: 'application_non_webpack',
+                                 'data-turbolinks-track' => true) %>
   <%= csrf_meta_tags %>
 </header>
 </head>
